--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --green-800: #030e08;
+  --green-800: #1d530d;
   --green-800-75: #004b2375;
   --green-700: #006400;
   --green-600: #007200;
