--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
   <h2>Welcome to</h2>
   <h1>
     NodeJS Authentication <br />
-    Starter App
+    Template
   </h1>
   <div class="fingerprint_icon">
     <i class="fa-solid fa-fingerprint"></i>
