"Added User model, nodemailer, and crypto dependencies; implemented password reset functionality with email token; updated auth routes and controllers; modified signin and layout views to display flash messages"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,11 @@
   --white-50: #ffffff50;
   --font: 'Gabarito', sans-serif;
 }
+h4{
+  font-family: var(--font);
+  color: var(-green-800-75);
+  font-size: 2rem;
+}
 
 * {
   margin: 0;
